попробовал все отцентрировать

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,19 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="body">
     <header class="header">
         <div class="container">
             <nav class="nav">
                 <img class="nav__logo" src="images/Tesla-Wordmark-Red.png" alt="">
-                <a href="" class="nav__menu-s">Model S</a>
-                <a href="" class="nav__menu-x">Model X</a>
-                <a href="" class="nav__menu-3">Model 3</a>
-                <a href="" class="nav__menu-roadster">Roadster</a>
-                <a href="" class="nav__menu-energy">Energy</a>
+                <div class="nav__menu">
+                    <a href="" class="nav__menu-s">Model S</a>
+                    <a href="" class="nav__menu-x">Model X</a>
+                    <a href="" class="nav__menu-3">Model 3</a>
+                    <a href="" class="nav__menu-roadster">Roadster</a>
+                    <a href="" class="nav__menu-energy">Energy</a>
+                </div>
                 <div class="menu">
                     <a href="" class="menu__item">Магазин</a>
                     <a href="" class="menu__item">Войти</a>
@@ -50,61 +54,50 @@
         <a href="" class="go-bottom"><img src="images/Vector.png" alt=""></a>
     </header>
     <section class="main">
-            <div class="main__inner">
-                <div class="left-section">
-                    <img src="images/background-section-mobi.png" alt="" class="left-section__img">
-                    <h2 class="left-section__title">Model S</h2>
+        <div class="main__inner">
+            <div class="left-section">
+                <img src="images/background-section-mobi.png" alt="" class="left-section__img">
+                <h2 class="left-section__title">Model S</h2>
+            </div>
+            <div class="right-section">
+                <div class="main-top">
+                    <h3 class="right-section__title">Будущее вождения</h3>
+                    <p class="right-section__text">Модель S обладает лучшей в своем классе вместимостью: в машине
+                        поместится до пяти взрослых и
+                        двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая
+                        инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша
+                        обеспечивает просторный интерьер для каждого пассажира.</p>
                 </div>
-                <div class="right-section">
-                    <div class="main-top">
-                        <h3 class="right-section__title">Будущее вождения</h3>
-                        <p class="right-section__text">Модель S обладает лучшей в своем классе вместимостью: в машине
-                            поместится до пяти взрослых и
-                            двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая
-                            инженерия создает динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша
-                            обеспечивает просторный интерьер для каждого пассажира.</p>
+                <div class="right-section__img">
+                    <img class="right-section__img-display" src="images/Display.png" alt="">
+                    <img class="right-section__img-wireless" src="images/Wireless-soft.png" alt="">
+                    <img class="right-section__img-bag" src="images/Bag-capacity.png" alt="">
+                </div>
+                <div class="features">
+                    <div class="features-info">
+                        <img class="features-info__img" src="images/Group.svg" alt="">
+                        <p class="features-info__desk">узнать больше</p>
                     </div>
-                    <div class="right-section__img">
-                        <img class="right-section__img-display" src="images/Display.png" alt="">
-                        <img class="right-section__img-wireless" src="images/Wireless-soft.png" alt="">
-                        <img class="right-section__img-bag" src="images/Bag-capacity.png" alt="">
-                    </div>
-                    <div class="features">
-                        <div class="features-info">
-                            <img class="features-info__img" src="images/Group.svg" alt="">
-                            <p class="features-info__desk">узнать больше</p>
-                        </div>
-                        <div class="features__order">
-                            <p class="features__order-desk">заказать</p>
-                        </div>
+                    <div class="features__order">
+                        <p class="features__order-desk">заказать</p>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <footer class="footer">
-            <div class="footer__left">
-                <div class="footer__left-head">
-                    <h3 class="footer__title">Самый безопасный автомобиль в мире</h3>
-                    <p class="footer__text">Модель S достигла наивысшей оценки безопасности любого автомобиля,
-                        когда-либо испытанного, и
-                        установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на
-                        переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
-                </div>
-                <div class="footer__left-body">
-                    <h3 class="left-body__title">Оценка защиты:</h3>
-                    <div class="rating">
-                        <div class="rating__sub-title">Спереди</div>
-                        <div class="rating__star">
-                            <img class="rating__star-img" src="images/Star.png" alt="">
-                            <img class="rating__star-img" src="images/Star.png" alt="">
-                            <img class="rating__star-img" src="images/Star.png" alt="">
-                            <img class="rating__star-img" src="images/Star.png" alt="">
-                            <img class="rating__star-img" src="images/Star.png" alt="">
-                        </div>
-                    </div>
-                </div>
+        <div class="footer__left">
+            <div class="footer__left-head">
+                <h3 class="footer__title">Самый безопасный автомобиль в мире</h3>
+                <p class="footer__text">Модель S достигла наивысшей оценки безопасности любого автомобиля,
+                    когда-либо испытанного, и
+                    установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на
+                    переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+            </div>
+            <div class="footer__left-body">
+                <h3 class="left-body__title">Оценка защиты:</h3>
                 <div class="rating">
-                    <div class="rating__sub-title">Сбоку</div>
+                    <div class="rating__sub-title">Спереди</div>
                     <div class="rating__star">
                         <img class="rating__star-img" src="images/Star.png" alt="">
                         <img class="rating__star-img" src="images/Star.png" alt="">
@@ -113,39 +106,50 @@
                         <img class="rating__star-img" src="images/Star.png" alt="">
                     </div>
                 </div>
-                <div class="rating">
-                    <div class="rating__sub-title">Сбоку<span class="rating__add">(стойка)</span></div>
-                    <div class="rating__star">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                    </div>
+            </div>
+            <div class="rating">
+                <div class="rating__sub-title">Сбоку</div>
+                <div class="rating__star">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
                 </div>
-                <div class="rating">
-                    <div class="rating__sub-title">Водитель</div>
-                    <div class="rating__star">
-                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
-                    </div>
+            </div>
+            <div class="rating">
+                <div class="rating__sub-title">Сбоку<span class="rating__add">(стойка)</span></div>
+                <div class="rating__star">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
                 </div>
-                <div class="rating-second">
-                    <div class="rating__sub-title">Пассажир</div>
-                    <div class="rating__star">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                        <img class="rating__star-img" src="images/Star.png" alt="">
-                    </div>
+            </div>
+            <div class="rating">
+                <div class="rating__sub-title">Водитель</div>
+                <div class="rating__star">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" class="rating__star-img" src="images/Star.png" alt="">
                 </div>
-                <div class="footer__left-bottom">
-                    <img class="security" src="images/security.png" alt="">
-                    <div class="footer-info__order">
+            </div>
+            <div class="rating-second">
+                <div class="rating__sub-title">Пассажир</div>
+                <div class="rating__star">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                    <img class="rating__star-img" src="images/Star.png" alt="">
+                </div>
+            </div>
+            <div class="footer__left-bottom">
+                <img class="security" src="images/security.png" alt="">
+                <div class="footer-info__order">
                     <div class="footer-info">
                         <img class="footer-info__img" src="images/Group.svg" alt="">
                         <p class="footer-info__desk">узнать больше</p>
@@ -153,23 +157,24 @@
                     <div class="footer__order">
                         <p class="footer__order-desk">заказать</p>
                     </div>
-                    </div>
                 </div>
             </div>
-            <div class="footer__right">
-                <div class="right-pc">
-                    <h3 class="footer__right-title"> Model S</h3>
-                    <img class="right-pc__img" src="images/Car-frame-pc.png" alt="">
-                </div>
-                <div class="right-mobi">
-                    <h3 class="footer__right-title"> Model S</h3>
-                    <img class="right-mobi__img" src="images/Car-frame-mobi.png" alt="">
-                </div>
-                <div class="right-ipad">
-                    <h3 class="footer__right-title"> Model S</h3>
-                    <img class="right-ipad__img" src="images/Car-frame-ipad.png" alt="">
-                </div>
+        </div>
+        <div class="footer__right">
+            <div class="right-pc">
+                <h3 class="footer__right-title"> Model S</h3>
+                <img class="right-pc__img" src="images/Car-frame-pc.png" alt="">
             </div>
+            <div class="right-mobi">
+                <h3 class="footer__right-title"> Model S</h3>
+                <img class="right-mobi__img" src="images/Car-frame-mobi.png" alt="">
+            </div>
+            <div class="right-ipad">
+                <h3 class="footer__right-title"> Model S</h3>
+                <img class="right-ipad__img" src="images/Car-frame-ipad.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
