--- a/index.html
+++ b/index.html
@@ -9,49 +9,43 @@
 </head>
 <body class="body">
     <header class="header">
-        <div class="container">
-            <nav class="nav">
-                <img class="nav__logo" src="images/Tesla-Wordmark-Red.svg" alt="">
-                <div class="nav__menu">
-                    <a href="" class="nav__menu-s">Model S</a>
-                    <a href="" class="nav__menu-x">Model X</a>
-                    <a href="" class="nav__menu-3">Model 3</a>
-                    <a href="" class="nav__menu-roadster">Roadster</a>
-                    <a href="" class="nav__menu-energy">Energy</a>
-                </div>
-                <div class="menu">
-                    <a href="" class="menu__item">Магазин</a>
-                    <a href="" class="menu__item">Войти</a>
-                    <img class="menu__img-burger" src="images/burger.svg" alt="">
-                    <img class="menu__img-burger-ipad" src="images/Vectorburger-ipad.svg" alt="">
-                </div>
-            </nav>
-            <div class="tesla-title">
-                <div class="tesla-title__subtitle">Model S</div>
-                <p class="tesla-title__desk">Добро пожаловать в будущее!</p>
-                <img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png" alt="">
-                <img class="tesla-title__car-mobi" src="images/tesla-png-tesla-png-hd-mobi.png" alt="">
-                <img class="tesla-title__car-ipad" src="images/tesla-png-tesla-png-hd-ipad.png" alt="">
+        <div class="nav">
+            <img class="nav__logo" src="images/Tesla-Wordmark-Red.svg" alt="">
+            <a href="" class="nav__menu-s">Model S</a>
+            <a href="" class="nav__menu-x">Model X</a>
+            <a href="" class="nav__menu-3">Model 3</a>
+            <a href="" class="nav__menu-roadster">Roadster</a>
+            <a href="" class="nav__menu-energy">Energy</a>
+            <a href="" class="menu__shop">Магазин</a>
+            <a href="" class="menu__enter">Войти</a>
+            <img class="menu__img-burger" src="images/burger.svg" alt="">
+            <img class="menu__img-burger-ipad" src="images/Vectorburger-ipad.svg" alt="">
+        </div>
+        <div class="tesla-title">
+            <div class="tesla-title__subtitle">Model S</div>
+            <p class="tesla-title__desk">Добро пожаловать в будущее!</p>
+            <img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png" alt="">
+            <img class="tesla-title__car-mobi" src="images/tesla-png-tesla-png-hd-mobi.png" alt="">
+            <img class="tesla-title__car-ipad" src="images/tesla-png-tesla-png-hd-ipad.png" alt="">
+        </div>
+        <div class="tesla-info-block">
+            <div class="info-block">
+                <img class="info-block__img-pc" src="images/Group-7-pc.svg" alt="">
             </div>
-            <div class="tesla-info-block">
-                <div class="info-block">
-                    <img class="info-block__img-pc" src="images/Group-7-pc.svg" alt="">
-                </div>
-                <div class="info-block">
-                    <img class="info-block__img-ipad-left" src="images/2,7ipad.png" alt="">
-                    <img class="info-block__img-ipad-right" src="images/632ipad.png" alt="">
-                </div>
-                <div class="info-block">
-                    <img class="info-block__mobile-right" src="images/Group-8-mobi.png" alt="">
-                    <img class="info-block__mobile-left" src="images/Group-9-mobi.png" alt="">
-                </div>
-                <div class="test-drive">
-                    <img class="test-drive__responsive" src="images/steering-wheel-pc.svg" alt="">
-                    <img class="test-drive__mobile" src="images/steering-wheel.svg" alt="">
-                    <img class="test-drive__ipad" src="images/steering-wheelipad.svg" alt="">
-                    <div class="test-drive__desk">Тест драйв</div>
-                    <div class="order">Заказать</div>
-                </div>
+            <div class="info-block">
+                <img class="info-block__img-ipad-left" src="images/2,7ipad.png" alt="">
+                <img class="info-block__img-ipad-right" src="images/632ipad.png" alt="">
+            </div>
+            <div class="info-block">
+                <img class="info-block__mobile-right" src="images/Group-8-mobi.png" alt="">
+                <img class="info-block__mobile-left" src="images/Group-9-mobi.png" alt="">
+            </div>
+            <div class="test-drive">
+                <img class="test-drive__responsive" src="images/steering-wheel-pc.svg" alt="">
+                <img class="test-drive__mobile" src="images/steering-wheel.svg" alt="">
+                <img class="test-drive__ipad" src="images/steering-wheelipad.svg" alt="">
+                <div class="test-drive__desk">Тест драйв</div>
+                <div class="order">Заказать</div>
             </div>
         </div>
         <a href="" class="go-bottom"><img src="images/Vector.png" alt=""></a>
@@ -179,4 +173,5 @@
         </div>
     </footer> -->
 </body>
+
 </html>
