--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,38 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="body">
     <header class="header">
         <div class="nav">
-            <img class="nav__logo" src="images/Tesla-Wordmark-Red.svg" alt="">
-            <a href="" class="nav__menu-s">Model S</a>
-            <a href="" class="nav__menu-x">Model X</a>
-            <a href="" class="nav__menu-3">Model 3</a>
-            <a href="" class="nav__menu-roadster">Roadster</a>
-            <a href="" class="nav__menu-energy">Energy</a>
-            <a href="" class="menu__shop">Магазин</a>
-            <a href="" class="menu__enter">Войти</a>
-            <img class="menu__img-burger" src="images/burger.svg" alt="">
-            <img class="menu__img-burger-ipad" src="images/Vectorburger-ipad.svg" alt="">
+            <div class="nav__logo">
+            <img class="nav__logo-img" src="images/Tesla-Wordmark-Red.svg" alt="">
+            <img class="nav__logo-img-mobi" src="images/Tesla-Wordmark-Redmobi-logo.png" alt="">
+            </div>
+            <div class="nav__menu">
+                <div class="nav__menu-first">
+                <a href="" class="nav__menu-s">Model S</a>
+                <a href="" class="nav__menu-x">Model X</a>
+            </div>
+            <div class="nav__menu-second">
+                <a href="" class="nav__menu-3">Model 3</a>
+                <a href="" class="nav__menu-roadster">Roadster</a>
+                <a href="" class="nav__menu-energy">Energy</a>
+            </div>
+            </div>
+            <div class="menu">
+                <a href="" class="menu__shop">Магазин</a>
+                <a href="" class="menu__enter">Войти</a>
+                <img class="menu__img-burger" src="images/burger.svg" alt="">
+                <img class="menu__img-burger-ipad" src="images/Vectorburger-ipad.svg" alt="">
+            </div>
         </div>
         <div class="tesla-title">
             <div class="tesla-title__subtitle">Model S</div>
             <p class="tesla-title__desk">Добро пожаловать в будущее!</p>
-            <img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png" alt="">
-            <img class="tesla-title__car-mobi" src="images/tesla-png-tesla-png-hd-mobi.png" alt="">
-            <img class="tesla-title__car-ipad" src="images/tesla-png-tesla-png-hd-ipad.png" alt="">
+            <div class="tesla-title__car"><img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png" alt=""></div>
+            <div class="tesla-title__car"><img class="tesla-title__car-mobi" src="images/tesla-png-tesla-png-hd-mobi.png" alt=""></div>
+            <div class="tesla-title__car"><img class="tesla-title__car-ipad" src="images/tesla-png-tesla-png-hd-ipad.png" alt=""></div>
         </div>
         <div class="tesla-info-block">
             <div class="info-block">
