снова на проверку

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="tesla-title">
             <div class="tesla-title__subtitle">Model S</div>
-            <p class="tesla-title__desk">Добро пожаловать в будущее!</p>
+            <div class="tesla-title__desk">Добро пожаловать в будущее!</div>
             <div class="tesla-title__car"><img class="tesla-title__car-pc" src="images/tesla-png-tesla-png-pc.png" alt=""></div>
             <div class="tesla-title__car"><img class="tesla-title__car-mobi" src="images/tesla-png-tesla-png-hd-mobi.png" alt=""></div>
             <div class="tesla-title__car"><img class="tesla-title__car-ipad" src="images/tesla-png-tesla-png-hd-ipad.png" alt=""></div>
@@ -46,18 +46,23 @@
                 <img class="info-block__img-pc" src="images/Group-7-pc.svg" alt="">
             </div>
             <div class="info-block">
-                <img class="info-block__img-ipad-left" src="images/2,7ipad.png" alt="">
-                <img class="info-block__img-ipad-right" src="images/632ipad.png" alt="">
+                <div class="info-block__img-ipad-left"><img class="info-block__img" src="images/2,7ipad.png" alt=""></div>
+                <div class="info-block__img-ipad-right"><img class="info-block__img" src="images/632ipad.png" alt=""></div>
+
             </div>
             <div class="info-block">
                 <img class="info-block__mobile-right" src="images/Group-8-mobi.png" alt="">
                 <img class="info-block__mobile-left" src="images/Group-9-mobi.png" alt="">
             </div>
             <div class="test-drive">
-                <img class="test-drive__responsive" src="images/steering-wheel-pc.svg" alt="">
-                <img class="test-drive__mobile" src="images/steering-wheel.svg" alt="">
-                <img class="test-drive__ipad" src="images/steering-wheelipad.svg" alt="">
-                <div class="test-drive__desk">Тест драйв</div>
+                <div class="test-drive__img">
+                    <img class="test-drive__responsive" src="images/steering-wheel-pc.svg" alt="">
+                    <img class="test-drive__ipad" src="images/steering-wheelipad.svg" alt="">
+                    <img class="test-drive__mobile" src="images/steering-wheel.svg" alt="">
+                </div>
+                <div class="test-drive__desk">
+                    <p class="test-drive__desk">Тест драйв</p>
+                </div>
                 <div class="order">Заказать</div>
             </div>
         </div>
